--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "globalize": "^1.4.2",
     "jsoneditor": "^5.32.3",
     "mockjs": "^1.0.1-beta3",
+    "ng-dynamic": "^3.0.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
